--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Means of Production Library Software</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <title>Means of Production Library Software</title>
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<div class="container">
+  <div class="row">
 <p><img src="https://github.com/matty-roses/meansofproduction/raw/fix_structure/media/Original%20Logo.png?raw=true" alt="Means Of Production logo"></p>
 <h1 id="meansofproduction">meansofproduction</h1>
 <p>A free as in beer application to manage a distributed library, especially a library of things.</p>
+  </div>
+<div class="row">
+  <div class="col">
 <h2 id="why">Why</h2>
 <ul>
   <li><p>Because there&#39;s no need for every person to buy every tool</p>
@@ -22,7 +31,12 @@
   </li>
 </ul>
 <a href="https://github.com/matty-roses/meansofproduction/"></a>
-<h2 id="roles">Roles</h2>
+    </div>
+  </div>
+  <div class="row">
+  <div class="col">
+    <h1>Entities</h1>
+    <h2 id="roles">Roles</h2>
 <p>Borrowers - somebody who has a need and wishes to use an item to fulfill that need</p>
 <p>Lenders - somebody with an item to lend.</p>
 <p>Libraries - organizations which connect Borrowers and Lenders, and prevent abuses for the general good.  Depending on the type of library, a library may also be a lender.
@@ -54,6 +68,8 @@
 <p>Libraries create Loans of Items.</p>
 <h2 id="tool-links">Tool links</h2>
 <p><a href="https://medium.com/@NiGhTTraX/making-typescript-monorepos-play-nice-with-other-tools-a8d197fdc680">https://medium.com/@NiGhTTraX/making-typescript-monorepos-play-nice-with-other-tools-a8d197fdc680</a></p>
+    </div>
+  <div class="col">
 <h1 id="faqs-about-distributed-libraries">FAQs about distributed libraries</h1>
 <h2 id="who-owns-the-items-">Who owns the items?</h2>
 <p>The same people that do now.  You are simply advertising that you&#39;re willing to lend the item to others.  You can impose some conditions on the lenders - like, for example, they&#39;ve proven their legal name, etc.</p>
@@ -69,6 +85,8 @@
 <h2 id="isn-t-a-permanent-loan-just-giving-the-item-away-">Isn&#39;t a permanent loan just giving the item away?</h2>
 <p>No - per the principle of usufruct, it means the person can use and profit from the item, but not permanently stop others from using it.</p>
 <p>In plain words, it means I give you the item, with the condition you don&#39;t sell it, instead giving it to someone else if you no longer want it.</p>
+    </div>
+  <div class="col">
 <h1 id="long-term-org-ideas">Long Term Org ideas</h1>
 <h2 id="daoify-this-organization">DAOify this organization</h2>
 <h3 id="tokens-would-be-granted-for">Tokens would be granted for</h3>
@@ -98,6 +116,8 @@
 <h3 id="risk-modeling-of-borrowers">Risk modeling of borrowers</h3>
 <h2 id="large-scale-distributed-kubernetes-cluster">Large scale distributed Kubernetes cluster</h2>
 <p>This will run over WireGuard VPN - we&#39;ll require 2 clusters.  One is to provide the VPN to the public, and also act as the general admin (able to approve or revoke general VPN certs for who can join the cluster).  The second uses the VPN provided by the first, and allows anyone to join their computer to a cluster to provide cloud resources and give a crowd sourced alternative to AWS and the like.</p>
-
+</div>
+  </div>
+</div>
 </body>
 </html>
