--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <div class="container">
   <div class="row">
-<p><img src="https://github.com/matty-roses/meansofproduction/raw/fix_structure/media/Original%20Logo.png?raw=true" alt="Means Of Production logo"></p>
+<p><img src="media/medium.png" alt="Means Of Production logo"></p>
 <h1 id="meansofproduction">meansofproduction</h1>
 <p>A free as in beer application to manage a distributed library, especially a library of things.</p>
   </div>
