Add contact links

--- a/index.html
+++ b/index.html
@@ -11,26 +11,31 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <div class="container">
   <div class="row">
+    <h1>Contact Us</h1>
+    <a href="https://discord.gg/23j4HTgj">Discord</a>
+    <a href="meansofp.aragonid.eth">DAO</a>
+  </div>
+  <div class="row">
 <p><img src="media/medium.png" alt="Means Of Production logo"></p>
 <h1 id="meansofproduction">meansofproduction</h1>
 <p>A free as in beer application to manage a distributed library, especially a library of things.</p>
   </div>
 <div class="row">
   <div class="col">
-<h2 id="why">Why</h2>
-<ul>
-  <li><p>Because there&#39;s no need for every person to buy every tool</p>
-  </li>
-  <li><p>Because most library software isn&#39;t free, or assumes that the library owns the items always and can store them locally.</p>
-  </li>
-  <li><p>Because control of the means of production is the material basis for everything</p>
-  </li>
-  <li><p>Because distributed tool libraries may be easier to setup, and not require tools to live in a central place!</p>
-  </li>
-  <li><p>Because Library Socialism is a great idea - if you&#39;d like to know more, check out srslywrong&#39;s series on this (<a href="https://srslywrong.com/podcast/189-library-socialism-usufruct/">https://srslywrong.com/podcast/189-library-socialism-usufruct/</a>).</p>
-  </li>
-</ul>
-<a href="https://github.com/matty-roses/meansofproduction/"></a>
+    <h2 id="why">Why</h2>
+    <ul>
+      <li><p>Because there&#39;s no need for every person to buy every tool</p>
+      </li>
+      <li><p>Because most library software isn&#39;t free, or assumes that the library owns the items always and can store them locally.</p>
+      </li>
+      <li><p>Because control of the means of production is the material basis for everything</p>
+      </li>
+      <li><p>Because distributed tool libraries may be easier to setup, and not require tools to live in a central place!</p>
+      </li>
+      <li><p>Because Library Socialism is a great idea - if you&#39;d like to know more, check out srslywrong&#39;s series on this (<a href="https://srslywrong.com/podcast/189-library-socialism-usufruct/">https://srslywrong.com/podcast/189-library-socialism-usufruct/</a>).</p>
+      </li>
+    </ul>
+    <a href="https://github.com/matty-roses/meansofproduction/"></a>
     </div>
   </div>
   <div class="row">
@@ -87,36 +92,59 @@
 <p>In plain words, it means I give you the item, with the condition you don&#39;t sell it, instead giving it to someone else if you no longer want it.</p>
     </div>
   <div class="col">
-<h1 id="long-term-org-ideas">Long Term Org ideas</h1>
-<h2 id="daoify-this-organization">DAOify this organization</h2>
-<h3 id="tokens-would-be-granted-for">Tokens would be granted for</h3>
-<ul>
-  <li>providing identify verification for self or others</li>
-  <li>this can also aid in modelling lending risk long term</li>
-  <li>lending items</li>
-  <li>borrowing items and returning them</li>
-  <li>donations of funds</li>
-  <li>software or library work</li>
-</ul>
-<h3 id="tokens-will-be-required-for">Tokens will be required for</h3>
-<ul>
-  <li>voting on policy (non-consuming)</li>
-  <li>late-fees or damages (for the latter, conversion to ETH or $ is how the library can offer insurance)</li>
-</ul>
-<h3 id="funds-can-withdraw-for">Funds can withdraw for</h3>
-<ul>
-  <li>payment of hosting</li>
-  <li>capital investments (library org can run its own networks clusters)</li>
-</ul>
-<h2 id="onboarding-for-existing-libraries">Onboarding for existing libraries</h2>
-<p>Many local or free libraries exist.  We should make it so not only can our software support their needs - but that we can offer an &quot;all-library&quot; view of items available anywhere a member has membership</p>
-<h2 id="faircoin-integration">Faircoin integration</h2>
-<p>For fees</p>
-<h2 id="insurance-of-distributed-lenders">Insurance of distributed lenders</h2>
-<h3 id="risk-modeling-of-borrowers">Risk modeling of borrowers</h3>
-<h2 id="large-scale-distributed-kubernetes-cluster">Large scale distributed Kubernetes cluster</h2>
-<p>This will run over WireGuard VPN - we&#39;ll require 2 clusters.  One is to provide the VPN to the public, and also act as the general admin (able to approve or revoke general VPN certs for who can join the cluster).  The second uses the VPN provided by the first, and allows anyone to join their computer to a cluster to provide cloud resources and give a crowd sourced alternative to AWS and the like.</p>
+    <h1 id="long-term-org-ideas">Long Term Org ideas</h1>
+    <h2 id="daoify-this-organization">DAOify this organization</h2>
+    <h3 id="tokens-would-be-granted-for">Tokens would be granted for</h3>
+    <ul>
+      <li>providing identify verification for self or others</li>
+      <li>this can also aid in modelling lending risk long term</li>
+      <li>lending items</li>
+      <li>borrowing items and returning them</li>
+      <li>donations of funds</li>
+      <li>software or library work</li>
+    </ul>
+    <h3 id="tokens-will-be-required-for">Tokens will be required for</h3>
+    <ul>
+      <li>voting on policy (non-consuming)</li>
+      <li>late-fees or damages (for the latter, conversion to ETH or $ is how the library can offer insurance)</li>
+    </ul>
+    <h3 id="funds-can-withdraw-for">Funds can withdraw for</h3>
+    <ul>
+      <li>payment of hosting</li>
+      <li>capital investments (library org can run its own networks clusters)</li>
+    </ul>
+    <h2 id="onboarding-for-existing-libraries">Onboarding for existing libraries</h2>
+    <p>Many local or free libraries exist.  We should make it so not only can our software support their needs - but that we can offer an &quot;all-library&quot; view of items available anywhere a member has membership</p>
+    <h2 id="faircoin-integration">Faircoin integration</h2>
+    <p>For fees perhaps?</p>
+        <a href="https://fair-coin.org/">FairCoin</a>
+    <h2 id="insurance-of-distributed-lenders">Insurance of distributed lenders</h2>
+    <h3 id="risk-modeling-of-borrowers">Risk modeling of borrowers</h3>
+    <h2 id="large-scale-distributed-kubernetes-cluster">Large scale distributed Kubernetes cluster</h2>
+    <p>This will run over WireGuard VPN - we&#39;ll require 2 clusters.  One is to provide the VPN to the public, and also act as the general admin (able to approve or revoke general VPN certs for who can join the cluster).  The second uses the VPN provided by the first, and allows anyone to join their computer to a cluster to provide cloud resources and give a crowd sourced alternative to AWS and the like.</p>
 </div>
+  </div>
+  <div class="row">
+    <h1>Possible currency rules</h1>
+    <div class="col">
+      <h2>Who is an entity for this</h2>
+      An entity is any person, or outside the library a corporation or other fictitious person.
+
+      Anyone who is more than a 5% holder of equity in a corporation should be considered to share debts of that, to avoid LLC hiding.
+
+      <h2>Ledgers</h2>
+      <ul>Capital</ul>
+      <ul>Labor</ul>
+    </div>
+    <div class ="col">
+      <h2>Capital inflows</h2>
+      Any donation to the library should be credited with the fair value within the capital ledger.  This enables
+
+      <h2>Capital outflows</h2>
+      Any purchase by the library should be considered a debit on the capital ledger for whatever entity the items are purchased for.
+      That entity (and any major owners) will be prevented from using the library until this debit is paid off or compensated.  This ensures that
+      the library can avoid having net capital drained from it by trading partners over the long term by for-profit entities, who sell items to the library but then use them.
+    </div>
   </div>
 </div>
 </body>
