--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Contact Us</h1>
       <ul>
         <li><a href="https://discord.gg/23j4HTgj">Discord</a></li>
-        <li><a href="meansofp.aragonid.eth">DAO</a></li>
+        <li><a href="https://meansofp.aragonid.eth">DAO</a></li>
       </ul>
     </div>
   </div>
