--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
   <h1 id="meansofproduction">meansofproduction</h1>
   <p>A free as in beer application to manage a distributed library, especially a library of things.</p>
   <div class="row">
-    <div class="column"></div>
     <div class="column">
-      <h1>Contact Us</h1>
+      <h1>Links</h1>
       <ul>
+        <li><a href="https://www.neweconomy.org.au/journal/issues/vol2/iss4/library-socialism/">https://www.neweconomy.org.au/journal/issues/vol2/iss4/library-socialism/</a></li>
+        <li><a href="https://srslywrong.com/">SRSLY Wrong podcast (origin of library socialism)</a></li>
+        <li><a href="https://client.aragon.org/?#/meansofp">DAO</a></li>
         <li><a href="https://discord.gg/23j4HTgj">Discord</a></li>
-        <li><a href="https://meansofp.aragonid.eth">DAO</a></li>
+        <li><a href="https://meansofp.aragonid.eth">ETH address</a></li>
+      </ul>
+    </div>
+    <div class="column">
+      <h1>White papers in progress</h1>
+      <ul>
+        <li><a href="https://docs.google.com/document/d/15MbzfQnM130NxX-eGfyxG4PyIw0TeotXaatIrak_EXg/edit?usp=sharing">Library Socialism Cryptocurrency Tokens</a></li>
       </ul>
     </div>
   </div>
